<resources>
    <string name="app_name">Fit4Free</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_login">Welcome to Fit4Free</string>
    <string name="opening_login">Proceed to your account</string>
    <string name="title_login">Login</string>
    <string name="edit_email_address">Email Address</string>
    <string name="edit_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="welcome_register">Welcome to Fit4Free</string>
    <string name="opening_register">Create your own account</string>
    <string name="title_register">Register</string>
    <string name="edit_name">Name</string>
    <string name="edit_height">Height (cm)</string>
    <string name="edit_weight">Weight (kg)</string>
    <string name="btn_register">Register</string>
    <string name="label_name">Name</string>
    <string name="label_height">Height</string>
    <string name="label_weight">Weight</string>
    <string name="label_email">Email Address</string>
    <string name="label_password">password</string>
    <string name="desc_btn_hide_show_password">to show/hide password</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_workout_reccomendation">Workout</string>
    <string name="title_diet">Diet</string>
    <string name="title_profile">Profile</string>
    <string name="value_height">170</string>
    <string name="unit_height"> cm</string>
    <string name="value_weight">70</string>
    <string name="unit_weight"> kg</string>
    <string name="label_recommendation">Recommendation</string>
    <string name="label_preference">Workout Preference</string>
    <string name="label_workout_per_week">Workout per week</string>
    <string name="value_workout_per_week">4</string>
    <string name="label_workout_type">Workout type</string>
    <string name="value_workout_type">leg day</string>
    <string name="label_train_duration">How many weeks have you done training?</string>
    <string name="value_train_duration">2</string>
    <string name="label_train_level">Training level</string>
    <string name="value_train_level">1</string>
    <string name="sample_item_workout">push up</string>
    <string name="sample_item_quantity">x 15</string>
    <string name="label_positive_reply">Ok</string>
    <string name="title_register_failed">Registration Failed</string>
    <string name="title_error">Error</string>
    <string name="message_error">Email has been used.</string>
    <string name="error_invalid_height">Height must be integer</string>
    <string name="error_invalid_weight">Weight must be integer</string>
    <string name="error_empty_field">Fill this field</string>
    <string name="title_just_registered">Let\'s Get Started</string>
    <string name="desc_just_registered">Fill your profile. We will generate workout training just for you.</string>
    <string name="error_empty_password">Fill the password</string>
    <string name="btn_logout">logout</string>
    <string name="desc_btn_workout">to workout recomendation</string>
    <string name="desc_to_diet">to diet recomendation</string>

    <string name="message_logout_confirm">Are you sure you want to log out?</string>
    <string name="action_confirm">Yes</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_internet">Check your internet connection</string>
    <string name="label_bodypart">Body Part</string>
    <string name="label_equipment">Equipment you have</string>
    <string name="label_edit">Edit</string>
    <string name="label_save">Save</string>
    <string name="desc_btn_save_pref">to save workout preference</string>
    <string name="desc_edit_workout_type">to edit workout type</string>
    <string name="desc_edit_bodypart">to edit bodypart</string>
    <string name="desc_edit_equipment">to edit equipment</string>
    <string name="desc_edit_train_level">to edit train level</string>
    <string name="number">1</string>
    <string name="empty_pref">not set</string>
    <string name="label_empty">-</string>
    <string name="desc_btn_save_user_data">to save height, weight, etc</string>
    <string name="desc_edit_height">to edit height</string>
    <string name="session_invalid">Please re login and try again</string>
    <string name="label_food_preference">Food Preference</string>
    <string name="desc_edit_diet_type">to edit diet type</string>
    <string name="label_diet_type">Diet Type</string>
    <string name="label_cuisine_type">Cuisine Type</string>
    <string name="sample_item_level">beginner</string>
    <string name="search_in_google">Search</string>
    <string name="food_recommendation">Food Recommendation</string>
    <string name="sample_item_food">Chicken</string>
    <string name="sample_diet_type">vegan</string>
    <string name="label2_diet_type">Diet Type :</string>
    <string name="label2_cuisine_type">Cuisine Type :</string>
    <string name="sample_cuisine_type">Italian</string>
    <string name="label_nutritious_fact">Nutritious Fact :</string>
    <string name="sample_nutritious_fact">Protein(10.3 g), Carbs(5.1 g), Fat(20 g), Calories(20 kal)</string>
    <string name="error_profile">Make sure you have filled your profile data. We use those data to generate recommendation.</string>
</resources>