<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_workout">

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.bangkit.capstone.fitness.ui.workout.WorkoutFragment"
        android:label="@string/title_workout_reccomendation"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/navigation_diet"
        android:name="com.bangkit.capstone.fitness.ui.diet.DietFragment"
        android:label="@string/title_diet"
        tools:layout="@layout/fragment_diet" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit.capstone.fitness.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>