<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    tools:context=".ui.authentication.LoginFragment">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_roundbox"
        android:backgroundTint="@color/white_50"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="167dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_logo4f"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_login"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />
        <TextView
            android:id="@+id/tv_opening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opening_login"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_opening">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorSecondaryVariant"
                android:hint="@string/edit_email_address" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorSecondaryVariant"
                android:hint="@string/edit_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_hide_show_password"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/desc_btn_hide_show_password"
            android:src="@drawable/ic_visibility"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutPassword"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/btn_login"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
